--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "mcp-send-email",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node dist/index.js",
+    "start": "node dist/index.js",
     "dev": "npm run build && nodemon dist/index.js",
     "dev:watch": "tsc --watch & nodemon dist/index.js",
     "test": "npm run build && node dist/index.js",
-    "mcp-only": "MCP_ONLY=true npm start"
+    "mcp-only": "MCP_ONLY=true npm run build && node dist/index.js"
   },
   "keywords": [],
   "author": "",
